--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,13 +1,2 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-
-  & h1 {
-    font-size: 50px;
-  }
-}
+@use "./global";
+@use "./calendar";
