--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -13,6 +13,19 @@ body {
   }
 }
 
+button {
+  background: transparent;
+  border: none;
+}
+
+input {
+  border: 1px solid #00000041;
+}
+
+input:focus {
+  outline: 1px solid rgb(0, 106, 255);
+}
+
 .wrapper {
   width: 100%;
   height: 100vh;
