button functionality and style fixes

--- a/src/assets/styles/_calendar.scss
+++ b/src/assets/styles/_calendar.scss
@@ -41,8 +41,8 @@
   // .calendar__today
 
   &__today {
-    background-color: #3b82f6;
-    color: white;
+    background-color: #3b82f6 !important;
+    color: white !important;
     font-weight: bold;
   }
 }
